# jornada-de-dados-aula13-bootcamp-python

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  __main__.py  pyproject.toml
data/csv_files/: csv_1.csv  csv_2.csv
data/json_files/: json_1.json
data/txt_files/: txt_1.txt
lib/: __init__.py
lib/classes/: AbstractDataSource.py  CsvSource.py  FilesSource.py  JsonSource.py  TxtSource.py  __init__.py
lib/classes/aws/: s3.py
