[project]
name = "aula-13"
version = "0.1.0"
description = "Aula 13 do bootcamp de python da jornada de dados."
authors = [
    {name = "JadesonBruno",email = "jadesonbruno.a@outlook.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "pre-commit (>=4.2.0,<5.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "schedule (>=1.2.2,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
